# math-physics

./: README.md  package-lock.json
03环境配置与基础上手/: 01openclaw飞书安装.md
16agent-proj/: README.md  pyproject.toml
16agent-proj/docs/: CONFIG_SETUP_CN.md  Physics_Derivation_Pro.prompt.md
16agent-proj/kb/: ode_basics.md
16agent-proj/scripts/: all_tools_question_test.py  eh_prompt_test.py  executor_smoke_test.py  gemini_smoke_test.py  kb_identity_test.py  start_webapp.ps1  stop_webapp.ps1  toolchain_smoke_test.py  verify_flow_smoke.py
16agent-proj/src/math_agent_mcp/: __init__.py  mcp_server.py  mcp_tool_executor.py  orchestrator.py  webapp.py
16agent-proj/src/math_agent_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
16agent-proj/src/math_agent_mcp/tools/: __init__.py  cadabra_tools.py  mathematica_tools.py
docs/: index.md
docs/.vitepress/: config.mts
docs/chapter1/: chapter1.md
docs/chapter2/: chapter2_1.md  chapter2_2.md
docs/chapter3/: README.md
docs/chapter4/: chapter4.md
docs/chapter5/: README.md
